feat(product, category): misc features including category ordering
